Bug 932761 - Implement Moz2D path builders for all of the SVG element types. r=dholbert